# cardano-mpfs-offchain

./: CHANGELOG.md  PLAN.md  README.md  cabal.project  flake.nix  justfile
PHASE4-DESIGN/: index.html
cardano-mpfs-offchain/: cardano-mpfs-offchain.cabal
cardano-mpfs-offchain/e2e-test/: main.hs
cardano-mpfs-offchain/e2e-test/Cardano/MPFS/E2E/: CageSpec.hs  ChainSyncSpec.hs  IndexerSpec.hs
cardano-mpfs-offchain/lib/Cardano/MPFS/: Application.hs  Balance.hs  Context.hs  Indexer.hs  Proof.hs  Provider.hs  State.hs  Submitter.hs  Trie.hs  TxBuilder.hs  Types.hs
cardano-mpfs-offchain/lib/Cardano/MPFS/Core/Bootstrap/: Genesis.hs
cardano-mpfs-offchain/lib/Cardano/MPFS/Indexer/: CageEvent.hs  CageFollower.hs  Codecs.hs  Columns.hs  Persistent.hs  Skeleton.hs
cardano-mpfs-offchain/lib/Cardano/MPFS/Mock/: Context.hs  Indexer.hs  Provider.hs  State.hs  Submitter.hs  TxBuilder.hs
cardano-mpfs-offchain/lib/Cardano/MPFS/NodeClient/: Codecs.hs  LocalStateQuery.hs
cardano-mpfs-offchain/lib/Cardano/MPFS/Trie/: Persistent.hs  Pure.hs  PureManager.hs
cardano-mpfs-offchain/lib/Cardano/MPFS/TxBuilder/: Real.hs
cardano-mpfs-offchain/lib/Cardano/MPFS/TxBuilder/Real/: Boot.hs  Internal.hs  Request.hs  Retract.hs  Update.hs
cardano-mpfs-offchain/test/: main.hs
cardano-mpfs-offchain/test/Cardano/MPFS/: BalanceSpec.hs  BootstrapSpec.hs  Generators.hs  StateSpec.hs  TrieManagerSpec.hs  TrieSpec.hs  TxBuilderSpec.hs
cardano-mpfs-offchain/test/Cardano/MPFS/Indexer/: CageEventSpec.hs  CodecsSpec.hs
cardano-mpfs-offchain/test/Cardano/MPFS/Trie/: PersistentSpec.hs
(+10 files in other folders)
